--- a/Ostermed/package.json
+++ b/Ostermed/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
